Added naming option to Snapshot ops sequence

--- a/tests/selenium/tests/Snapshots/create-volume-from-snapshot-on-snapshot-lp.html
+++ b/tests/selenium/tests/Snapshots/create-volume-from-snapshot-on-snapshot-lp.html
@@ -62,11 +62,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>waitForVisible</td>
 	<td>id=name</td>
 	<td></td>
@@ -74,12 +69,7 @@
 <tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>volume${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>volume${str}</td>
-	<td>volume_name</td>
+	<td>${volume_name}</td>
 </tr>
 <tr>
 	<td>echo</td>
