--- a/tests/selenium/tests/Snapshots/register-snapshot-as-image-from-snapshot-lp.html
+++ b/tests/selenium/tests/Snapshots/register-snapshot-as-image-from-snapshot-lp.html
@@ -72,23 +72,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>image${str}</td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>id=name</td>
-	<td></td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>image${str}</td>
 	<td>image_name</td>
 </tr>
 <tr>
@@ -99,7 +84,7 @@
 <tr>
 	<td>type</td>
 	<td>id=description</td>
-	<td>UI automated test for registering snapshot as image</td>
+	<td>${image_description} to test registering snapshot as image</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -131,7 +116,6 @@
 	<td>${image_id}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
