Added naming option to Keypair ops sequence

--- a/tests/selenium/tests/Keypairs/import-key-pair.html
+++ b/tests/selenium/tests/Keypairs/import-key-pair.html
@@ -72,19 +72,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>id=key-name</td>
-	<td>key${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>key${str}</td>
-	<td>keypair_name</td>
+	<td>${keypair_name}</td>
 </tr>
 <tr>
 	<td>echo</td>
