Added naming option to Elastic IP ops sequence

--- a/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
+++ b/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
@@ -67,19 +67,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>name=name_0</td>
-	<td>instance${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>instance${str}</td>
-	<td>instance_name</td>
+	<td>${instance_name}</td>
 </tr>
 <tr>
 	<td>echo</td>
