Added naming option to Elastic IP ops sequence

--- a/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
+++ b/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
@@ -142,11 +142,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>waitForVisible</td>
 	<td>id=key-name</td>
 	<td></td>
@@ -154,12 +149,7 @@
 <tr>
 	<td>type</td>
 	<td>id=key-name</td>
-	<td>key${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>key${str}</td>
-	<td>keypair_name</td>
+	<td>${keypair_name}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -197,19 +187,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
+	<td>waitForVisible</td>
+	<td>id=name</td>
+	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>group${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>group${str}</td>
-	<td>s_group_name</td>
+	<td>${s_group_name}</td>
 </tr>
 <tr>
 	<td>type</td>
