Added a waitForVisible step to verify-instance-is-running.html

--- a/tests/selenium/tests/Instances/verify-instance-is-running.html
+++ b/tests/selenium/tests/Instances/verify-instance-is-running.html
@@ -117,6 +117,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//form[@id='instance-form']/div/div[2]/span</td>
+	<td></td>
+</tr>
+<tr>
 	<td>storeText</td>
 	<td>//form[@id='instance-form']/div/div[2]/span</td>
 	<td>status</td>
