Added IAM quota check for IAM

--- a/tests/selenium/tests/IAM_Users/verify-elb-quota-value.html
+++ b/tests/selenium/tests/IAM_Users/verify-elb-quota-value.html
@@ -60,6 +60,16 @@
 	<td>id=elb_load_balancers_max</td>
 	<td>${lb_max}</td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
