--- a/tests/selenium/tests/IAM_Users/create-user-with-no-password-no-policy.html
+++ b/tests/selenium/tests/IAM_Users/create-user-with-no-password-no-policy.html
@@ -85,6 +85,16 @@
 	<td>${user}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
