--- a/tests/selenium/tests/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html
+++ b/tests/selenium/tests/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html
@@ -90,6 +90,16 @@
 	<td>Status: ${user_status}, Groups: ${user_groups}, Password: ${user_password}, Keys: ${user_accesskeys}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
