Fixed IAM test case errors

--- a/tests/selenium/tests/IAM_Users/create-iam-quota.html
+++ b/tests/selenium/tests/IAM_Users/create-iam-quota.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=IAM</td>
+	<td>css=#iam-section &gt; span.title &gt; a &gt; span</td>
 	<td></td>
 </tr>
 <tr>
@@ -101,7 +101,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
