--- a/tests/selenium/tests/IAM_Users/verify-iam-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-iam-quota.html
@@ -53,7 +53,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=IAM</td>
+	<td>css=#iam-section &gt; span.title &gt; a &gt; span</td>
 	<td></td>
 </tr>
 <tr>
@@ -86,7 +86,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
