--- a/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
+++ b/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
@@ -52,7 +52,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>waitForVisible</td>
 	<td>//dl[@id='instance-subnav']/dd[2]/a</td>
 	<td></td>
 </tr>
