Updated Instance ops sequence to work with UI 4.1

--- a/tests/selenium/INSTANCE_OPERATIONS.html
+++ b/tests/selenium/INSTANCE_OPERATIONS.html
@@ -29,6 +29,8 @@
 <tr><td><a href="tests/StoreAndSet/SecurityGroups/set-s-group-to-default.html">set-s-group-to-default</a></td></tr>
 <tr><td><a href="tests/StoreAndSet/Instances/set-instance-type-to-t1-micro.html">set-instance-type-to-t1-micro</a></td></tr>
 <tr><td><a href="tests/StoreAndSet/Instances/set-instance-name-to-instance-and-5randomchars.html">set-instance-name-to-instance-and-5randomchars</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/SecurityGroups/set-s-group-data-to-s_group_1.html">set-s-group-data-to-s_group_1</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/Keypairs/set-keypair-name-to-keypair_1.html">set-keypair-name-to-keypair_1</a></td></tr>
 <tr><td><a href="tests/Instances/launch-instance-from-images-lp.html">launch-instance-from-images-lp</a></td></tr>
 <tr><td><a href="tests/Instances/verify-instance-is-running.html">verify-instance-is-running</a></td></tr>
 <tr><td><a href="tests/StoreAndSet/Instances/store-instance-status.html">store-instance-status</a></td></tr>
