--- a/tests/selenium/tests/Instances/verify-instance-data-displays-on-lp.html
+++ b/tests/selenium/tests/Instances/verify-instance-data-displays-on-lp.html
@@ -57,13 +57,13 @@
 	<td>${instance_status}</td>
 </tr>
 <tr>
-	<td>storeText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[6]</td>
+	<td>waitForText</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[7]</td>
 	<td>${keypair_name}</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[7]</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[8]</td>
 	<td>${s_group_name}</td>
 </tr>
 </tbody></table>
