Modified EC2 suite/case

--- a/tests/selenium/tests/IAM_Users/verify-ec2-instance-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-instance-quota.html
@@ -172,7 +172,7 @@
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
@@ -217,7 +217,7 @@
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
