--- a/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
@@ -72,8 +72,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>doubleClickAt</td>
-	<td>//div[@id='volume_id_chosen']/div/ul/li[2]</td>
+	<td>clickAt</td>
+	<td>css=li.active-result</td>
 	<td></td>
 </tr>
 <tr>
@@ -112,8 +112,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>doubleClickAt</td>
-	<td>//div[@id='volume_id_chosen']/div/ul/li[2]</td>
+	<td>clickAt</td>
+	<td>css=li.active-result</td>
 	<td></td>
 </tr>
 <tr>
@@ -127,8 +127,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
+<tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
