More IAM EC2 modifications

--- a/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
@@ -42,6 +42,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>1</td>
+	<td></td>
+</tr>
+<tr>
 	<td>waitForTextPresent</td>
 	<td>Eucalyptus Systems</td>
 	<td></td>
@@ -134,6 +139,11 @@
 <tr>
 	<td>echo</td>
 	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>1</td>
 	<td></td>
 </tr>
 <tr>
