--- a/tests/selenium/tests/IAM_Users/verify-as-scaling-group-config-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-as-scaling-group-config-quota.html
@@ -66,14 +66,19 @@
 	<td></td>
 </tr>
 <tr>
+	<td>storeEval</td>
+	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
+	<td>str</td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>sg1</td>
+	<td>sg-${str}</td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>id=launch_config</td>
-	<td>label=lc1</td>
+	<td>label=${lc1}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -101,14 +106,19 @@
 	<td></td>
 </tr>
 <tr>
+	<td>storeEval</td>
+	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
+	<td>str1</td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>sg2</td>
+	<td>sg-${str1}</td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>id=launch_config</td>
-	<td>label=lc1</td>
+	<td>label=${lc1}</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -124,6 +134,11 @@
 	<td>storeTextPresent</td>
 	<td>Request would exceed quota for type: autoscalingroup</td>
 	<td>asquota</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
 </tr>
 <tr>
 	<td>echo</td>
@@ -149,11 +164,6 @@
 	<td>assertEval</td>
 	<td>${tcount1} + 1==${tcount2}</td>
 	<td>true</td>
-</tr>
-<tr>
-	<td>storeText</td>
-	<td>id=notifications</td>
-	<td>breadcrumbs</td>
 </tr>
 <tr>
 	<td>echo</td>
