Added assertion to verify-instance-is-running test. Corrected typo in the image name in register-snapshot-as-image-from-snapshot-lp.

--- a/tests/selenium/tests/Instances/verify-instance-is-running.html
+++ b/tests/selenium/tests/Instances/verify-instance-is-running.html
@@ -152,6 +152,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertText</td>
+	<td>//form[@id='instance-form']/div/div[2]/span</td>
+	<td>running</td>
+</tr>
+<tr>
 	<td>echo</td>
 	<td>${instance_name} (${instance_id}) is running</td>
 	<td></td>
