Updated tests to match locators in 4.1 branch, added assertions

--- a/tests/selenium/tests/Snapshots/verify-snapshot-status-is-completed-on-lp.html
+++ b/tests/selenium/tests/Snapshots/verify-snapshot-status-is-completed-on-lp.html
@@ -141,6 +141,11 @@
 	<td></td>
 	<td></td>
 </tr>
+<tr>
+	<td>assertText</td>
+	<td>//td/a[@href=&quot;/snapshots/${snapshot_id}&quot;]/../../td[2]/span</td>
+	<td>completed</td>
+</tr>
 </tbody></table>
 </body>
 </html>
