--- a/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
+++ b/tests/selenium/tests/Instances/launch-instance-from-dashboard-create-s-group-and-key-from-launch-wz.html
@@ -133,12 +133,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=create-keypair-link</td>
+	<td>//div[@id='create-keypair-link']/a</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=create-keypair-link</td>
+	<td>//div[@id='create-keypair-link']/a</td>
 	<td></td>
 </tr>
 <tr>
@@ -182,8 +182,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//div[@id='create-securitygroup-link']/a</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>id=create-securitygroup-link</td>
+	<td>//div[@id='create-securitygroup-link']/a</td>
 	<td></td>
 </tr>
 <tr>
@@ -222,7 +227,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>id=launch-instance-btn-step3</td>
 	<td></td>
 </tr>
@@ -267,8 +272,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[8]/div/a</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[7]/div/a</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/instances/${instance_id}']/../../td[8]/div/a</td>
 	<td></td>
 </tr>
 <tr>
