Updated tests to match locators in 4.1 branch

--- a/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-instances-lp.html
+++ b/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-instances-lp.html
@@ -72,6 +72,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//li[text()=&quot;${ip}&quot;]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAt</td>
 	<td>//li[text()=&quot;${ip}&quot;]</td>
 	<td></td>
