--- a/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-inst-detail-page.html
+++ b/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-inst-detail-page.html
@@ -63,17 +63,17 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=disassociate-ip-action</td>
+	<td>id=disassociate-ip-from-instance-action</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=disassociate-ip-action</td>
+	<td>id=disassociate-ip-from-instance-action</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=disassociate_ip_to_instance_submit_button</td>
+	<td>click</td>
+	<td>//button[@id='disassociate_ip_to_instance_submit_button']</td>
 	<td></td>
 </tr>
 <tr>
@@ -91,7 +91,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
