--- a/tests/selenium/tests/Instances/terminate-instance-from-lp.html
+++ b/tests/selenium/tests/Instances/terminate-instance-from-lp.html
@@ -72,6 +72,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>setSpeed</td>
+	<td>200</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=notifications</td>
+	<td></td>
+</tr>
+<tr>
 	<td>storeText</td>
 	<td>id=notifications</td>
 	<td>breadcrumbs</td>
