--- a/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-detail-page.html
+++ b/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-detail-page.html
@@ -62,8 +62,13 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>id=associate-ip-to-instance-action</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>id=associate-ip-action</td>
+	<td>id=associate-ip-to-instance-action</td>
 	<td></td>
 </tr>
 <tr>
@@ -106,7 +111,6 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
