--- a/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-ip-lp.html
+++ b/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-ip-lp.html
@@ -66,6 +66,21 @@
 	<td>id=disassociate_ip_submit_button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=notifications</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
