--- a/tests/selenium/tests/Instances/verify-no-running-instances.html
+++ b/tests/selenium/tests/Instances/verify-no-running-instances.html
@@ -111,7 +111,11 @@
 	<td></td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>assertText</td>
+	<td>//div[@id='tableview']/div/div</td>
+	<td>${no_items_found}</td>
+</tr>
 </tbody></table>
 </body>
 </html>
