Made adjustment in test speed for delete-volume-on-detail-page

--- a/tests/selenium/tests/Volumes/delete-volume-on-detail-page.html
+++ b/tests/selenium/tests/Volumes/delete-volume-on-detail-page.html
@@ -82,6 +82,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>setSpeed</td>
+	<td>100</td>
+	<td></td>
+</tr>
+<tr>
 	<td>waitForVisible</td>
 	<td>id=notifications</td>
 	<td></td>
@@ -94,6 +99,11 @@
 <tr>
 	<td>echo</td>
 	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>setSpeed</td>
+	<td>500</td>
 	<td></td>
 </tr>
 <tr>
