Adjustments and assertions added to Volume ops sequence

--- a/tests/selenium/tests/Volumes/delete-volume-from-lp.html
+++ b/tests/selenium/tests/Volumes/delete-volume-from-lp.html
@@ -171,6 +171,11 @@
 	<td></td>
 	<td></td>
 </tr>
+<tr>
+	<td>assertText</td>
+	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]</td>
+	<td>deleted</td>
+</tr>
 </tbody></table>
 </body>
 </html>
