--- a/tests/selenium/tests/Volumes/delete-volume-on-detail-page.html
+++ b/tests/selenium/tests/Volumes/delete-volume-on-detail-page.html
@@ -82,16 +82,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>setSpeed</td>
-	<td>100</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>id=notifications</td>
-	<td></td>
-</tr>
-<tr>
 	<td>storeText</td>
 	<td>id=notifications</td>
 	<td>breadcrumbs</td>
@@ -99,11 +89,6 @@
 <tr>
 	<td>echo</td>
 	<td>${breadcrumbs}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>setSpeed</td>
-	<td>500</td>
 	<td></td>
 </tr>
 <tr>
@@ -195,6 +180,11 @@
 	<td>endWhile</td>
 	<td></td>
 	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]</td>
+	<td>deleted</td>
 </tr>
 </tbody></table>
 </body>
