--- a/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
+++ b/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
@@ -151,6 +151,11 @@
 	<td></td>
 	<td></td>
 </tr>
+<tr>
+	<td>assertText</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[3]</td>
+	<td>attached</td>
+</tr>
 </tbody></table>
 </body>
 </html>
